--- a/hello/docker/Dockerfile
+++ b/hello/docker/Dockerfile
@@ -83,7 +83,9 @@ COPY src/startup_db /clixon/build/var/hello/startup_db
 COPY src/clixon-hello@*.yang /clixon/build/share/clixon
 
 # Copy startscript for starting backend and restconf
-COPY startsystem.sh /clixon/build/bin/
+WORKDIR /clixon
+COPY startsystem.sh startsystem.sh 
+RUN install startsystem.sh /clixon/build/usr/local/bin/
 
 #
 # Stage 2
@@ -109,7 +111,10 @@ EXPOSE 80/tcp
 # Create clicon user and group
 RUN adduser -D -H clicon
 
-COPY --from=0 /clixon/build/ /usr/local/
+COPY --from=0 /clixon/build/ /
+
+# Create symlink so you can run clixon without -f arg
+RUN ln -s /etc/clixon.xml /usr/local/etc/clixon.xml 
 
 # Start the backend and restconf deamons
 CMD /usr/local/bin/startsystem.sh
