--- a/3gpp/docker/Dockerfile
+++ b/3gpp/docker/Dockerfile
@@ -84,7 +84,9 @@ RUN mkdir -p /clixon/build/share/clixon/3gpp
 COPY yang /clixon/build/share/clixon/3gpp
 
 # Copy startscript for starting backend and restconf
-COPY startsystem.sh /clixon/build/bin/
+WORKDIR /clixon
+COPY startsystem.sh startsystem.sh 
+RUN install startsystem.sh /clixon/build/usr/local/bin/
 
 #
 # Stage 2
@@ -110,7 +112,9 @@ EXPOSE 80/tcp
 # Create clicon user and group
 RUN adduser -D -H clicon
 
-COPY --from=0 /clixon/build/ /usr/local/
+COPY --from=0 /clixon/build/ /
+
+RUN ln -s /etc/clixon.xml /usr/local/etc/clixon.xml 
 
 # Start the backend and restconf deamons
 CMD /usr/local/bin/startsystem.sh
