--- a/wifi/docker/Makefile.in
+++ b/wifi/docker/Makefile.in
@@ -35,7 +35,7 @@ srcdir  	= .
 top_srcdir  	= ../..
 
 # docker.hub image. CHANGE THIS IF YOU PUSH YOUR OWN
-IMG   = clixon/wifi-system
+IMG   = clixon/wifi
 
 .PHONY: all clean distclean docker push depend install uninstall
 
