--- a/wifi/src/wifi.xml.in
+++ b/wifi/src/wifi.xml.in
@@ -17,8 +17,8 @@
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@localstatedir@/wifi</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
-  <CLICON_SOCK_GROUP>clicon</CLICON_SOCK_GROUP>
-  <CLICON_RESTCONF_USER>clicon</CLICON_RESTCONF_USER>
+  <CLICON_SOCK_GROUP>@CLICON_GROUP@</CLICON_SOCK_GROUP>
+  <CLICON_RESTCONF_USER>@CLICON_USER@</CLICON_RESTCONF_USER>
   <CLICON_RESTCONF_PRIVILEGES>drop_perm</CLICON_RESTCONF_PRIVILEGES>
   <CLICON_RESTCONF_INSTALLDIR>@sbindir@</CLICON_RESTCONF_INSTALLDIR>
 </clixon-config>
