Actions: move to unique restconf ports, rename action file, add runtime tests Created separated yang dir for wifi and openconfig, and added required ietf- and iana- yangs docker: fixed links for new restconf/autoconf for configdir autoconf: double eval and init exec_prefix, use libdir instead of libexecdir Obsoleted 3gpp example

--- a/3gpp/src/3gpp.xml.in
+++ b/3gpp/src/3gpp.xml.in
@@ -5,7 +5,7 @@
   <CLICON_YANG_DIR>@DATADIR@/clixon</CLICON_YANG_DIR>
   <CLICON_YANG_MAIN_DIR>@DATADIR@/clixon/3gpp</CLICON_YANG_MAIN_DIR>
   <CLICON_CLI_MODE>3gpp</CLICON_CLI_MODE>
-  <CLICON_CLISPEC_DIR>@LIBEXECDIR@/3gpp/clispec</CLICON_CLISPEC_DIR>
+  <CLICON_CLISPEC_DIR>@LIBDIR@/3gpp/clispec</CLICON_CLISPEC_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/3gpp.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/3gpp.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/3gpp</CLICON_XMLDB_DIR>
