--- a/wifi/src/wifi.xml.in
+++ b/wifi/src/wifi.xml.in
@@ -5,13 +5,12 @@
   <CLICON_FEATURE>clixon-restconf:allow-auth-none</CLICON_FEATURE>
   <CLICON_YANG_DIR>@DATADIR@/clixon</CLICON_YANG_DIR>
   <CLICON_YANG_DIR>@DATADIR@/openconfig/public/release/models</CLICON_YANG_DIR>
-  <CLICON_YANG_DIR>@DATADIR@/yang/standard</CLICON_YANG_DIR>
   <CLICON_YANG_MODULE_MAIN>clixon-wifi</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>wifi</CLICON_CLI_MODE>
   <CLICON_CLI_LINESCROLLING>0</CLICON_CLI_LINESCROLLING>
   <CLICON_CLI_TAB_MODE>0</CLICON_CLI_TAB_MODE>
-  <CLICON_CLISPEC_DIR>@LIBEXECDIR@/wifi/clispec</CLICON_CLISPEC_DIR>
-  <CLICON_BACKEND_DIR>@LIBEXECDIR@/wifi/backend</CLICON_BACKEND_DIR>
+  <CLICON_CLISPEC_DIR>@LIBDIR@/wifi/clispec</CLICON_CLISPEC_DIR>
+  <CLICON_BACKEND_DIR>@LIBDIR@/wifi/backend</CLICON_BACKEND_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/wifi.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/wifi.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
