--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.so.*
 *.so
 *.depend
+*~
 autom4te.cache/
 config.log
 config.status
@@ -9,18 +10,28 @@ TAGS
 Makefile
 hello/Makefile
 hello/src/Makefile
+hello/src/hello.xml
 hello/docker/Makefile
 hello/docker/src
 hello/docker/yang
 openconfig/Makefile
+openconfig/src/Makefile
+openconfig/src/openconfig.xml
+openconfig/yang/Makefile
 openconfig/docker/Makefile
 openconfig/docker/src
+openconfig/docker/yang
 wifi/Makefile
+wifi/src/Makefile
+wifi/src/wifi.xml
+wifi/yang/Makefile
 wifi/docker/Makefile
 wifi/docker/src
+wifi/docker/yang
 3gpp/Makefile
 3gpp/yang/Makefile
 3gpp/src/Makefile
+3gpp/src/3gpp.xml
 3gpp/docker/Makefile
 3gpp/docker/src
 3gpp/docker/yang
