--- a/hello/src/hello.xml.in
+++ b/hello/src/hello.xml.in
@@ -6,7 +6,7 @@
   <CLICON_YANG_DIR>@DATADIR@/clixon</CLICON_YANG_DIR>
   <CLICON_YANG_MODULE_MAIN>clixon-hello</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>hello</CLICON_CLI_MODE>
-  <CLICON_CLISPEC_DIR>@LIBEXECDIR@/hello/clispec</CLICON_CLISPEC_DIR>
+  <CLICON_CLISPEC_DIR>@LIBDIR@/hello/clispec</CLICON_CLISPEC_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/hello.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/hello.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
