--- a/openconfig/src/openconfig.xml.in
+++ b/openconfig/src/openconfig.xml.in
@@ -5,10 +5,9 @@
   <CLICON_FEATURE>clixon-restconf:allow-auth-none</CLICON_FEATURE>
   <CLICON_YANG_DIR>@DATADIR@/clixon</CLICON_YANG_DIR>
   <CLICON_YANG_DIR>@DATADIR@/openconfig/public/release/models</CLICON_YANG_DIR>
-  <CLICON_YANG_DIR>@DATADIR@/yang/standard</CLICON_YANG_DIR>
   <CLICON_YANG_MODULE_MAIN>openconfig-system</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>openconfig</CLICON_CLI_MODE>
-  <CLICON_CLISPEC_DIR>@LIBEXECDIR@/openconfig/clispec</CLICON_CLISPEC_DIR>
+  <CLICON_CLISPEC_DIR>@LIBDIR@/openconfig/clispec</CLICON_CLISPEC_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/openconfig.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/openconfig.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
