Put our socket and pidfile in our private directory
Can't run as non-privileged user and create files/sockets in /usr/var
or wherever...

--- a/hello/src/hello.xml.in
+++ b/hello/src/hello.xml.in
@@ -7,8 +7,8 @@
   <CLICON_YANG_MODULE_MAIN>clixon-hello</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>hello</CLICON_CLI_MODE>
   <CLICON_CLISPEC_DIR>@LIBDIR@/hello/clispec</CLICON_CLISPEC_DIR>
-  <CLICON_SOCK>@LOCALSTATEDIR@/hello.sock</CLICON_SOCK>
-  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/hello.pidfile</CLICON_BACKEND_PIDFILE>
+  <CLICON_SOCK>@LOCALSTATEDIR@/hello/hello.sock</CLICON_SOCK>
+  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/hello/hello.pidfile</CLICON_BACKEND_PIDFILE>
   <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/hello</CLICON_XMLDB_DIR>
