--- a/openconfig/src/openconfig.xml.in
+++ b/openconfig/src/openconfig.xml.in
@@ -8,8 +8,8 @@
   <CLICON_YANG_MODULE_MAIN>openconfig-system</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>openconfig</CLICON_CLI_MODE>
   <CLICON_CLISPEC_DIR>@LIBDIR@/openconfig/clispec</CLICON_CLISPEC_DIR>
-  <CLICON_SOCK>@LOCALSTATEDIR@/openconfig.sock</CLICON_SOCK>
-  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/openconfig.pidfile</CLICON_BACKEND_PIDFILE>
+  <CLICON_SOCK>@LOCALSTATEDIR@/openconfig/openconfig.sock</CLICON_SOCK>
+  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/openconfig/openconfig.pidfile</CLICON_BACKEND_PIDFILE>
   <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/openconfig</CLICON_XMLDB_DIR>
