--- a/wifi/src/wifi.xml.in
+++ b/wifi/src/wifi.xml.in
@@ -11,8 +11,8 @@
   <CLICON_CLI_TAB_MODE>0</CLICON_CLI_TAB_MODE>
   <CLICON_CLISPEC_DIR>@LIBDIR@/wifi/clispec</CLICON_CLISPEC_DIR>
   <CLICON_BACKEND_DIR>@LIBDIR@/wifi/backend</CLICON_BACKEND_DIR>
-  <CLICON_SOCK>@LOCALSTATEDIR@/wifi.sock</CLICON_SOCK>
-  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/wifi.pidfile</CLICON_BACKEND_PIDFILE>
+  <CLICON_SOCK>@LOCALSTATEDIR@/wifi/wifi.sock</CLICON_SOCK>
+  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/wifi/wifi.pidfile</CLICON_BACKEND_PIDFILE>
   <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/wifi</CLICON_XMLDB_DIR>
