--- a/3gpp/src/3gpp.xml.in
+++ b/3gpp/src/3gpp.xml.in
@@ -6,8 +6,8 @@
   <CLICON_YANG_MAIN_DIR>@DATADIR@/clixon/3gpp</CLICON_YANG_MAIN_DIR>
   <CLICON_CLI_MODE>3gpp</CLICON_CLI_MODE>
   <CLICON_CLISPEC_DIR>@LIBDIR@/3gpp/clispec</CLICON_CLISPEC_DIR>
-  <CLICON_SOCK>@LOCALSTATEDIR@/3gpp.sock</CLICON_SOCK>
-  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/3gpp.pidfile</CLICON_BACKEND_PIDFILE>
+  <CLICON_SOCK>@LOCALSTATEDIR@/3gpp/3gpp.sock</CLICON_SOCK>
+  <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/3gpp/3gpp.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/3gpp</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
 </clixon-config>
